[package]
name = "cuda-retry"
version = "0.1.0"
edition = "2021"
description = "Retry with exponential backoff, jitter, circuit breaker"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-retry"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }
